--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="label_settings">Settings</string>
     <string name="label_capsule_detail">Capsule Detail</string>
     <string name="label_core_detail">Core Detail</string>
+    <string name="label_upcoming_launches">Upcoming Launches</string>
 
     <string name="title_capsule_serial">Capsule serial</string>
     <string name="title_type">Type</string>
@@ -34,6 +35,7 @@
     <string name="title_valuation">Valuation</string>
     <string name="title_headquarters">Headquarters</string>
     <string name="title_city">city</string>
+
 
 
 </resources>
