--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,6 @@
 
     <string name="core_block">Block %d</string>
     <string name="core_block_null">Block not assigned</string>
+    <string name="launch_site">Launch site</string>
+    <string name="flight_number">Flight %d</string>
 </resources>
