Extract strings from Settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,11 @@
     <string name="core_block_null">Block not assigned</string>
     <string name="launch_site">Launch site</string>
     <string name="flight_number">Flight %d</string>
+
+    <!-- Settings  -->
+    <string name="settings_refresh_interval_title">Data refresh interval</string>
+    <string name="settings_dark_mode_title">Dark mode</string>
+    <string name="settings_dark_mode_summary_on">Dark mode enabled</string>
+    <string name="settings_dark_mode_summary_off">Dark mode disabled</string>
+    <string name="settings_refresh_interval_dialog_title">Set data auto refresh interval</string>
 </resources>
