--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="label_core_detail">Core Detail</string>
     <string name="label_upcoming_launches">Upcoming Launches</string>
     <string name="label_upcoming_launches_detail">Launch Detail</string>
+    <string name="label_about">About</string>
 
     <string name="title_capsule_serial">Capsule serial</string>
     <string name="title_type">Type</string>
@@ -56,4 +57,5 @@
     <string name="lottie_rocket_attribution">Animation made by Donghwa Kang, check her work at
         lottiefiles.com/dongdona
     </string>
+
 </resources>
