--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,4 +88,12 @@
     <string name="launch_date">Launch date</string>
     <string name="refresh">Refresh</string>
     <string name="delete">Delete</string>
+
+    <string name="block_number_template">Block %d</string>
+    <string name="no_cores_used_in_launch">No cores are used in this mission</string>
+    <string name="no_precision_info">No precision info provided</string>
+    <string name="no_payloads">No payloads</string>
+    <string name="second_stage_payloads">Second stage payloads</string>
+    <string name="first_stage_cores">First stage cores</string>
+    <string name="expand_collapse_arrow_image">Expand and collapse arrow image</string>
 </resources>
