--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="label_core_detail">Core Detail</string>
     <string name="label_upcoming_launches">Upcoming Launches</string>
     <string name="label_upcoming_launches_detail">Launch Detail</string>
+    <string name="label_launch_pads">Launch Pads</string>
     <string name="label_about">About</string>
     <string name="label_used_libs">Used Libraries</string>
 
@@ -129,4 +130,5 @@
     <string name="get_the_app_source_code_on_github">Get the app source code on GitHub</string>
     <string name="customers_payloads">Customers:</string>
     <string name="attribution_used_libraries">Click here to check out awesome libraries that helped with making this app.</string>
+
 </resources>
