--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,5 +138,19 @@
     <string name="customers_payloads">Customers:</string>
     <string name="attribution_used_libraries">Click here to check out awesome libraries that helped with making this app.</string>
     <string name="launches">Launches</string>
+    <string name="month_short_january">Jan.</string>
+    <string name="month_short_february">Feb.</string>
+    <string name="month_short_march">Mar.</string>
+    <string name="month_short_april">Apr.</string>
+    <string name="month_may">May</string>
+    <string name="month_short_june">Jun.</string>
+    <string name="month_short_july">Jul.</string>
+    <string name="month_short_august">Aug.</string>
+    <string name="september">Sep.</string>
+    <string name="month_short_october">Oct.</string>
+    <string name="month_short_november">Nov.</string>
+    <string name="month_short_december">Dec.</string>
+    <string name="number_of_launches_in_2019">Number of launches in 2019</string>
+    <string name="actual_stats">Actual stats</string>
 
 </resources>
