Add marker to chart

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,7 +146,7 @@
     <string name="month_short_june">Jun.</string>
     <string name="month_short_july">Jul.</string>
     <string name="month_short_august">Aug.</string>
-    <string name="september">Sep.</string>
+    <string name="month_short_september">Sep.</string>
     <string name="month_short_october">Oct.</string>
     <string name="month_short_november">Nov.</string>
     <string name="month_short_december">Dec.</string>
