--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,5 +156,6 @@
     <string name="year_to_show_in_chart">Year to show in chart</string>
     <string name="launches_in_template">Launches in %d</string>
     <string name="status_of_capsules">Status of capsules</string>
+    <string name="status_of_cores">Status of cores</string>
 
 </resources>
