--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,10 +47,6 @@
 
     <string name="core_block">Block %d</string>
     <string name="core_block_null">Block not assigned</string>
-    <string name="capsule_serial_newest">Capsule serial: newest</string>
-    <string name="capsule_serial_oldest">Capsule serial: oldest</string>
-    <string name="core_serial_newest">Core serial: newest</string>
-    <string name="core_serial_oldest">Core serial: oldest</string>
     <string name="flight_number_newest">Flight number: newest</string>
     <string name="flight_number_oldest">Flight number: oldest</string>
     <string name="launch_site">Launch site</string>
@@ -163,11 +159,9 @@
     <string name="successful_launches">Successful launches</string>
     <string name="content_desc_image_expand_collapse">Icon indicating if location item is collapsed or expanded</string>
     <string name="content_desc_image_location_pin">Image with location pin</string>
-    <string name="capsule_status_active_first">Capsule status: active first</string>
-    <string name="capsule_status_active_last">Capsule status: active last</string>
     <string name="block_ascending">Block: ascending</string>
     <string name="block_descending">Block: descending</string>
-    <string name="core_block_ascending">Core block: ascending</string>
-    <string name="core_block_descending">Core block: descending</string>
+    <string name="status_active_first">Status: active first</string>
+    <string name="status_active_last">Status: active last</string>
 
 </resources>
