Add mission matches to launches list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,5 +163,6 @@
     <string name="block_descending">Block: descending</string>
     <string name="status_active_first">Status: active first</string>
     <string name="status_active_last">Status: active last</string>
+    <string name="image_with_mission_patch">Image with mission patch</string>
 
 </resources>
