--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -165,5 +165,7 @@
     <string name="status_active_last">Status: active last</string>
     <string name="image_with_mission_patch">Image with mission patch</string>
     <string name="no_info">No info</string>
+    <string name="flight">Flight</string>
+    <string name="landing">Landing</string>
 
 </resources>
