Change header title color, fix icon animation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -167,5 +167,5 @@
     <string name="no_info">No info</string>
     <string name="flight">Flight</string>
     <string name="landing">Landing</string>
-
+    <string name="unknown_core">Unknown Core</string>
 </resources>
